--- a/view/common/block-layout/slideshow.phtml
+++ b/view/common/block-layout/slideshow.phtml
@@ -1,4 +1,4 @@
-<div id="block-<?php echo $this->blockId; ?>" class="region <?php echo $this->regionClass; ?> <?php echo $hasAudioAttachment ? 'slideshow-with-audio' : 'slideshow-block'; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="block-<?php echo $this->blockId; ?>" class="grid-x grid-padding-x margin-bottom-1 region <?php echo $this->regionClass; ?> <?php echo $hasAudioAttachment ? 'slideshow-with-audio' : 'slideshow-block'; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <div class="slideshow">
         <?php if ($useTitleSlide): ?>
             <div class="item resource introduction <?php foreach ($attachmentOptions as $attachmentOption => $defaultVal) {echo ' slide-' . $attachmentOption . '-' . ${'attachment' . ucfirst($attachmentOption)}[0];}?>">
@@ -11,9 +11,9 @@
                         ?>
                     </div>
                 </figure>
-                <div class='slide-contents'>
+                <div class='slide-contents grid-container flex-container flex-dir-column'>
                     <?php if (!empty($titleSlideTitle)): ?>
-                        <h3><?php echo $titleSlideTitle; ?></h3>
+                        <h3 class="align-center"><?php echo $titleSlideTitle; ?></h3>
                     <?php endif; ?>
                     <?php if (!empty($titleSlideIntro)): ?>
                         <?php echo $titleSlideIntro; ?>
@@ -41,7 +41,7 @@
                         </figure>
                     <?php endif; ?>
                 <?php endif; ?>
-                <div class="slide-contents">
+                <div class="slide-contents grid-container">
                     <?php if ($showTitleOption == 'item_title'): ?>
                         <h3><?php echo $item->link($item->displayTitle()); ?></h3>
                     <?php elseif ($showTitleOption == 'file_name'): ?>
@@ -70,5 +70,4 @@
         </div>
     <?php endif; ?>
 </div>
-
 
