--- a/view/common/block-layout/slideshow.phtml
+++ b/view/common/block-layout/slideshow.phtml
@@ -1,4 +1,4 @@
-<div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x grid-padding-x margin-bottom-1 region <?php echo $this->regionClass; ?> <?php echo $hasAudioAttachment ? 'slideshow-with-audio' : 'slideshow-block'; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x grid-padding-x region <?php echo $this->regionClass; ?> <?php echo $hasAudioAttachment ? 'slideshow-with-audio' : 'slideshow-block'; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <div class="slideshow grid-container">
         <?php if ($useTitleSlide): ?>
             <div class="item resource introduction <?php foreach ($attachmentOptions as $attachmentOption => $defaultVal) {echo ' slide-' . $attachmentOption . '-' . ${'attachment' . ucfirst($attachmentOption)}[0];}?>">
@@ -43,9 +43,9 @@
                 <?php endif; ?>
                 <div class="slide-contents grid-container">
                     <?php if ($showTitleOption == 'item_title'): ?>
-                        <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+                        <h3 class="padding-top-1 large-padding-top-2"><?php echo $item->link($item->displayTitle()); ?></h3>
                     <?php elseif ($showTitleOption == 'file_name'): ?>
-                        <h3><?php echo $media->displayTitle(); ?></h3>
+                        <h3 class="padding-top-1 large-padding-top-2"><?php echo $media->displayTitle(); ?></h3>
                     <?php endif; ?>
                     <?php if ($attachment->caption()): ?>
                         <?php echo $attachment->caption(); ?>
