--- a/view/common/block-layout/asset-hero-two-columns.phtml
+++ b/view/common/block-layout/asset-hero-two-columns.phtml
@@ -25,24 +25,24 @@ $escape = $plugins->get('escapeHtml');
 $escapeAttr = $plugins->get('escapeHtmlAttr');
 ?>
 
-<div class="full-width-css grid-x region-splash">
-    <?php if (!empty($heading)) : ?>
-        <div class="flex-container region-splash"> 
-            <h2><?= $escape($heading) ?></h2>
-        </div>
-    <?php endif; ?>
+<div class="full-width-css grid-x grid-padding-x region-splash hero-two-col">
+    <div class="large-5 xlarge-4">
+        <?php if (!empty($heading)) : ?>
+            <div class="asset-heading flex-container region-splash"> 
+                <h2 class="text-treatment-1"><?= $escape($heading) ?></h2>
+            </div>
+        <?php endif; ?>
+    </div>
 
     <?php if (!count($attachments)) return; ?>
     <?php $attachment = $attachments[array_rand($attachments)]; ?>
     <?php if (empty($attachment['asset'])) return; ?>
-    <div class="small-12 medium-8">
-        <div class="hero-image image-large region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
-        </div>
+    <div class="hero-image image-full region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
     </div>
 
     <?php if ($attachment['caption']) : ?>
-        <div class="small-12 medium-4 flex-container align-middle align-center region-splash colour-scheme-2 text-treatment-2 margin-bottom-0"> 
-            <h2 class="text-treatment-3 large-padding-2"><?= $attachment['caption'] ?></h2>
+        <div class="asset-caption large-5 xlarge-6 flex-container align-middle align-center region-splash margin-bottom-0"> 
+            <p class="text-treatment-1 large-padding-2"><?= $attachment['caption'] ?></p>
             <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : $attachment['url']; ?>
             <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
                 <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
