--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -2350,7 +2350,7 @@ span.fullscreen-wrapper {
 }
 }
 
-[aria-label="slide 1"] img {
+.slideshow [aria-label="slide 1"] img {
         filter: grayscale(1);
     }
     
