Additional revisions to img cover Resource with Text

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1797,6 +1797,7 @@ figcaption.orbit-caption.caption p {
         height: 100%;
     }
     @include breakpoint(large) {
+        height: 100vh;
         max-height: unset;
     }
 }
