Added padding to title display on Item Show page

--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -35,7 +35,7 @@ if ($galleryDisplay) {
 }
 ?>
 
-<div class="resource-title">
+<div class="resource-title padding-bottom-1 large-padding-bottom-2">
 <?php echo $this->pageTitle($item->displayTitle(), 2); ?>
 <h3 class="label"><?php echo $translate('Item'); ?></h3>
 </div>
