Revised Resource Text Image Cover Dark
Added metadata fields

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1509,6 +1509,9 @@ nav.breadcrumbs {
     a.button {
         color: $white;
     }
+    h3 small {
+        color: $white;
+    }
 }
 
 /*BlockPlus Blocks*/
