--- a/view/common/block-layout/item-showcase-multiples-keep-ratio.phtml
+++ b/view/common/block-layout/item-showcase-multiples-keep-ratio.phtml
@@ -1,7 +1,11 @@
-<div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-y grid-margin-y small-padding-0 medium-padding-1 large-padding-2 region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
+<?php
+    $itemCount = count($this->attachments);
+?>
+
+<figure id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-y grid-margin-y small-padding-0 medium-padding-1 large-padding-2 region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
     <div class="grid-x grid-margin-x flex-container align-spaced">
         <?php foreach ($attachments as $attachment): ?>
-            <figure class="item resource flex-container flex-dir-column align-middle small-margin-bottom-1 medium-margin-bottom-2">
+            <div class="item-listing-item item resource flex-container flex-dir-column align-middle item-count-<?php echo $itemCount; ?> small-margin-bottom-1 medium-margin-bottom-2">
                 <?php
                 $item = $attachment->item();
                 if ($item):
@@ -16,9 +20,9 @@
                     ?>
                     <?php $showTitleOption = $this->showTitleOption; ?>
                     <?php if ($showTitleOption == 'item_title'): ?>
-                    <h3 class="margin-top-1 separator-center"><?php echo $item->link($item->displayTitle()); ?></h3>
+                    <h3 class="margin-top-1"><?php echo $item->link($item->displayTitle()); ?></h3>
                 <?php elseif ($showTitleOption == 'file_name'): ?>
-                    <h3 class="margin-top-1 separator-center"><?php echo $media->displayTitle(); ?></h3>
+                    <h3 class="margin-top-1"><?php echo $media->displayTitle(); ?></h3>
                 <?php endif; ?>
                 <?php endif; ?>
                 <?php
@@ -27,15 +31,17 @@
                     ?>
                     <div class="caption padding-1 xlarge-padding-horizontal-2 xlarge-padding-horizontal-3 font-wide flex-child-grow grid-container"><?php echo $caption; ?></div>
                 <?php endif; ?>
-                <div class="text font-wide align-left">
+
+                <div class="text font-wide text-left">
                     <?php
                     $identifier = $item->value('dcterms:identifier');
                     if ($identifier):
                     ?>
-                    <h3 class="h4 padding-horizontal-1 xlarge-padding-horizontal-2 xlarge-padding-horizontal-3"><small><?php echo 'Reference ' . $identifier; ?></small></h3>
+                    <h3 class="h4"><small><?php echo 'Reference ' . $identifier; ?></small></h3>
                     <?php endif; ?>
                 </div>
-            </figure>
+
+            </div>
         <?php endforeach; ?>
     </div>
-</div>
+</figure>
