Added hover to Annona storyboard tool

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -2726,7 +2726,8 @@ polygon>.svgactive:hover {
         } 
 }
 
-#storyboard_viewer button:hover {
+#storyboard_viewer button:hover,
+#multistoryboard button:hover {
     cursor: pointer;
 }
 
