Revised Resource Text blocks

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -2739,7 +2739,7 @@ polygon>.svgactive:hover {
 
 .seadragonbox {
     @include breakpoint(small only) {
-        height: 400px;
+        height: rem-calc(330);
     }
 }
 
