--- a/view/common/block-layout/resource-text-image-cover-dark.phtml
+++ b/view/common/block-layout/resource-text-image-cover-dark.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block full-width-css grid-x grid-padding-x background-colour-uom-footer margin-bottom-1 flex-container image-cover">
+<div class="block full-width-css grid-x grid-padding-x margin-bottom-1 flex-container image-cover">
     <?php if (!empty($heading)): ?>
     <div class="grid-container cell margin-bottom-1">
     <h3><?= $escape($heading) ?></h3>
