--- a/view/common/block-layout/resource-text-metadata.phtml
+++ b/view/common/block-layout/resource-text-metadata.phtml
@@ -23,8 +23,8 @@ $lang = $filterLocale ? $this->lang() : null;
 
 <div class="block media-text grid-x grid-padding-x medium-padding-1 align-spaced">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading">
-        <h2><?= $escape($heading) ?></h2>
+    <div class="media-text-heading margin-bottom-1">
+        <h3><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
     <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-7 flex-container align-spaced medium-padding-right-1 large-padding-right-0 large-padding-top-1">
