--- a/view/common/block-layout/resource-text-image-cover-dark.phtml
+++ b/view/common/block-layout/resource-text-image-cover-dark.phtml
@@ -29,23 +29,26 @@ $lang = $filterLocale ? $this->lang() : null;
     <?php endif; ?>
     <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 flex-container">
         <div class="attachments flex-container">
-            <?php
+        <?php
             foreach ($attachments as $attachment):
                 $render = null;
                 $title = null;
                 $link = null;
                 $item = $attachment->item();
                 if ($item):
-              $media = $attachment->media() ? : $item->primaryMedia();
-               $mediaRenderer = $media->renderer();
-               if ($media && $mediaRenderer !== 'iiif') :
+                    $media = $attachment->media() ? : $item->primaryMedia();
+                    $mediaRenderer = $media->renderer();
+                    $mediaType = $media->mediaType();
+                    if ($media && $mediaRenderer === 'iiif') :
+                   echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
+                   elseif ($media && $mediaType === 'image/jpeg') :
+                   echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
+                   elseif ($media) :
                    echo $media->render([
                    'thumbnailType' => $thumbnailType,
                    'link' => $link,
-               ]);
-               elseif ($media) :
-                   echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-               endif;
+                    ]);
+                endif;
 
                     if ($showTitleOption == 'item_title'):
                         $title = $item->displayTitle(null, $lang);
