--- a/view/common/block-layout/resource-text-video.phtml
+++ b/view/common/block-layout/resource-text-video.phtml
@@ -27,7 +27,7 @@ $lang = $filterLocale ? $this->lang() : null;
     <h2><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container flex-dir-column align-center">
+    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container flex-dir-column align-center video-wrap">
         <div class="attachments responsive-embed">
             <?php
             foreach ($attachments as $attachment):
