--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1123,6 +1123,9 @@ a.resource-link img {
 .file img {
     max-width: 100%;
     height: auto;
+    @include breakpoint(large) {
+    max-height: 100vh;
+    }
 }
 
 .attachments .media-render>h3,
