Added Alternative Title label to each block

--- a/view/common/block-layout/resource-text-full-size-image-cover-dark.phtml
+++ b/view/common/block-layout/resource-text-full-size-image-cover-dark.phtml
@@ -88,7 +88,13 @@ $lang = $filterLocale ? $this->lang() : null;
         <?php elseif ($showTitleOption == 'file_name'): ?>
         <h3><?php echo $item->link($media->displayTitle()); ?></h3>
         <?php endif; ?>
-    <?php
+        <?php
+            $altTitle = $item->value('dcterms:alternative');
+            if ($altTitle):
+            ?>
+            <h3 class="subtitle"><small><?php echo $altTitle; ?></small></h3>
+        <?php endif; ?>
+        <?php
          $date = $item->value('dcterms:date');
          if ($date):
          ?>
