--- a/view/common/block-layout/item-showcase-no-image.phtml
+++ b/view/common/block-layout/item-showcase-no-image.phtml
@@ -10,13 +10,27 @@
                     $title = $this->plugin('escapeHtml')($item->displayTitle());
                     $media = $attachment->media() ?: $item->primaryMedia();
                     ?>
-                    <?php $showTitleOption = $this->showTitleOption; ?>
-                    <?php if ($showTitleOption == 'item_title'): ?>
-                    <h3 class="margin-top-1 separator-center"><?php echo $item->link($item->displayTitle()); ?></h3>
-                <?php elseif ($showTitleOption == 'file_name'): ?>
-                    <h3 class="margin-top-1 separator-center"><?php echo $media->displayTitle(); ?></h3>
-                <?php endif; ?>
-                <?php endif; ?>
+                    <div class="separator-center">
+                        <?php $showTitleOption = $this->showTitleOption; ?>
+                        <?php if ($showTitleOption == 'item_title'): ?>
+                            <h3 class="margin-top-1"><?php echo $item->link($item->displayTitle()); ?></h3>
+                        <?php elseif ($showTitleOption == 'file_name'): ?>
+                            <h3 class="margin-top-1"><?php echo $media->displayTitle(); ?></h3>
+                        <?php endif; ?>
+                    <?php endif; ?>
+                        <?php
+                        $date = $item->value('dcterms:date');
+                            if ($date):
+                            ?>
+                            <h3><small><?php echo $date; ?></small></h3>
+                        <?php endif; ?>
+                        <?php
+                        $created = $item->value('dcterms:created');
+                            if ($created):
+                            ?>
+                            <h3><small><?php echo $created; ?></small></h3>
+                        <?php endif; ?>
+                    </div>
                 <?php
                 $caption = $attachment->caption();
                 if ($caption):
