--- a/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
@@ -86,18 +86,18 @@ $lang = $filterLocale ? $this->lang() : null;
         <?php elseif ($showTitleOption == 'file_name'): ?>
         <h3><?php echo $item->link($media->displayTitle()); ?></h3>
         <?php endif; ?>
-        <?php
-            $altTitle = $item->value('dcterms:alternative');
-            if ($altTitle):
-            ?>
-            <h3 class="subtitle"><small><?php echo $altTitle; ?></small></h3>
-        <?php endif; ?>
-        <?php
+    <?php
          $date = $item->value('dcterms:date');
          if ($date):
          ?>
       <h3><small><?php echo $date; ?></small></h3>
       <?php endif; ?>
+      <?php
+        $created = $item->value('dcterms:created');
+            if ($created):
+            ?>
+            <h3><small><?php echo $created; ?></small></h3>
+        <?php endif; ?>
       <?php
          $origin = $item->value('curation:location');
          if ($origin):
